--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # --- Basic options --- #
 
 # Name of website
-title: My website
+title: Timothy Carroll
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: Data Scientist and information junkie
 
 # Your name to show in the footer
-author: Some Person
+author: Timothy Carroll
 
 # --- List of links in the navigation bar --- #
 
