--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: Timothy Carroll
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
+    - Lambda School: "https://lambdaschool.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
   Author's home: "https://deanattali.com"
 
@@ -39,10 +39,10 @@ round-avatar: true
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
   email: "someone@example.com"
-  facebook: deanattali
   github: daattali
   twitter: daattali
   rss: true
+#  facebook: deanattali
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
@@ -72,7 +72,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "https://timrocar.github.io/"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
@@ -84,14 +84,14 @@ excerpt_length: 50
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#F5F5F5"
-navbar-text-col: "#404040"
-navbar-border-col: "#EAEAEA"
-page-col: "#FFFFFF"
+navbar-col: "#633e3e"
+navbar-text-col: "	#ded5d5"
+navbar-border-col: "#ded5d5"
+page-col: "#bdb09a"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#F5F5F5"
-footer-text-col: "#777777"
+footer-col: "#F5F5F#633e3e"
+footer-text-col: "#ded5d5"
 footer-link-col: "#404040"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
