--- a/_config.yml
+++ b/_config.yml
@@ -107,10 +107,10 @@ footer-link-col: "#404040"
 #gtag: ""
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+#google_analytics: "UA-173910820-1"
 
 # Google Tag Manager ID
-#gtm: "UA-173910820-1"
+#gtm: ""
 
 # Matomo (aka Piwik) Web statistics
 # Uncomment the following section to enable Matomo. The opt-out parameter controls
