--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ excerpt_length: 50
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#633e3e"
+navbar-col: "#D4BD8A"
 navbar-text-col: "#ded5d5"
 navbar-border-col: "#ded5d5"
 page-col: "#bdb09a"
