--- a/_config.yml
+++ b/_config.yml
@@ -85,9 +85,9 @@ excerpt_length: 50
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
 navbar-col: "#D4BD8A"
-navbar-text-col: "#ded5d5"
+navbar-text-col: "#FFFFFF"
 navbar-border-col: "#ded5d5"
-page-col: "#bdb09a"
+page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#F5F5F#633e3e"
