--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ navbar-links:
   Resources:
     - Lambda School: "https://lambdaschool.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Author's home: "http://timothyrcarroll.com/"
 
 # --- Logo --- #
 
